--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -46,7 +46,13 @@
     display: inline-flex;
     background-color: brown;
 }
-
+.visited {
+    border: 1px solid black;
+    height: 10px;
+    width: 10px;
+    display: inline-flex;
+    background-color: orange;
+}
 .board {
     /* margin-left: 2rem; */
     margin-top: 2rem;
@@ -70,4 +76,9 @@ select {
 }
 .form-control {
     width: 200px;
+}
+
+.row div {
+    /* transition: 0.1s; */
+    animation: alternate;
 }
