--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,35 @@
-body{
-   font-family: Arial, Helvetica, sans-serif;
-  
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
-.container{
-
+.container {
     text-align: center;
-    margin: auto
-
+    margin: auto;
 }
-canvas{
-
+canvas {
     background-color: #1e1f26;
     border: 0.75px solid black;
     /* border-left: 0.25px solid #1e1f26;
     border-bottom: 0.25px solid #1e1f26 */
-
 }
 
-table{
+table {
     margin: auto;
     margin-top: 20px;
     margin-bottom: 20px;
     border: 1px solid black;
     border-spacing: 0px;
 }
-tr{
+tr {
     border: 1px solid black;
 }
-td{
+td {
     border: 1px solid black;
-
 }
-.controls{
-    
+.controls {
     text-align: left;
     padding-left: 50px;
-    
 }
-.controls button{
+.controls button {
     margin-top: 10px;
     margin-left: 10px;
     border: none;
@@ -48,50 +40,63 @@ td{
     padding: 10px;
 }
 
-.controls button:hover{
+.controls .selector {
+    margin-top: 10px;
+    margin-left: 10px;
+    border: none;
+    background: none;
+    height: 35px;
+    border: 1px solid #1e1f26;
+    border-radius: 5px;
+    padding: 10px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-
+.controls button:hover {
     background: black;
     color: white;
 }
 
-a{
+a {
     margin-top: 10px;
     margin-left: 10px;
-  
+
     background: none;
-    
+
     border: 1px solid #1e1f26;
     padding: 10px;
     border-radius: 5px;
 }
 
-.footer{
+.footer {
     display: flex;
     padding-left: 50px;
     padding-right: 50px;
     justify-content: space-between;
     color: white;
-    background-color:#1e1f26;
+    background-color: #1e1f26;
     padding: 20px;
     border-radius: 5px;
 }
-.footer a{
-    border: 1px solid  white;
-    color:white; 
+.footer a {
+    border: 1px solid white;
+    color: white;
     text-decoration: none;
 }
 
-input{
+input {
     border: none;
     background: none;
 }
-input:focus{
+input:focus {
     border: none;
     border-radius: 0;
-    outline: none
+    outline: none;
 }
 
-controls .astar:hover{
+controls .astar:hover {
     background-color: greenyellow;
 }
