--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ td {
     border-radius: 5px;
     padding: 10px;
     width: 150px;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
 }
